--- a/about.html
+++ b/about.html
@@ -371,6 +371,11 @@
         const clientHeight=document.body.clientHeight;
         window.scrollBy(0, clientHeight);   
     };
+    document.addEventListener('touchmove', function (event) {  
+        if(flag==1){
+        event.preventDefault();
+        }
+        },{passive:false});
     </script>
 </body>
 </html>
