--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- 自訂意CSS-->
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="body_noscroll">
+<body class="body_noscroll" @touchmove.prevent>
     <div class="cursor" id="cursor"></div>
     <nav id="ham" class="top_menu_nav hide">
         <div class="top_menu_nav_sub_wrapper">
