--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-hant-tw" @touchmove.prevent>
+<html lang="zh-hant-tw" >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" >
@@ -177,7 +177,7 @@
          </div>
         </div>
     </header>
-    <main class="bg_about">
+    <main class="bg_about" @touchmove.prevent>
         <div class="click-back" id="back" ></div>
         <div class="click-next" id="next" ></div>        
         <section class="about_section_01" id="about_section_01">
