--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
          </div>
         </div>
     </header>
-    <main class="bg_about" @touchmove.prevent>
+    <main class="bg_about" >
         <div class="click-back" id="back" ></div>
         <div class="click-next" id="next" ></div>        
         <section class="about_section_01" id="about_section_01">
