--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
          </div>
         </div>
     </header>
-    <main class="bg_about" >
+    <main class="bg_about" @touchmove.prevent>
         <div class="click-back" id="back" ></div>
         <div class="click-next" id="next" ></div>        
         <section class="about_section_01" id="about_section_01">
@@ -371,13 +371,6 @@
         const clientHeight=document.body.clientHeight;
         window.scrollBy(0, clientHeight);   
     };
-<<<<<<< HEAD
-=======
-    // 禁止滑动调用
-    const unScoll = () => {
-    document.addEventListener('touchmove', event, { passive: false });
-     };
->>>>>>> 974e97a9dca65e16a5b77a1435b6fdcbd76b1961
     </script>
 </body>
 </html>
