--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-hant-tw" @touchmove.prevent >
+<html lang="zh-hant-tw" >
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" >
