--- a/about.html
+++ b/about.html
@@ -371,6 +371,8 @@
         const clientHeight=document.body.clientHeight;
         window.scrollBy(0, clientHeight);   
     };
+        $(window).bind('touchmove',function(e) { 
+            e.preventDefault();});
     </script>
 </body>
 </html>
