--- a/about.html
+++ b/about.html
@@ -371,8 +371,8 @@
         const clientHeight=document.body.clientHeight;
         window.scrollBy(0, clientHeight);   
     };
-        var handler = function(e){e.preventDefault();}
-        document.addEventListener('touchmove', handler, false);
+    var handler = function(e){e.preventDefault();}
+        document.addEventListener('touchmove', handler, {passive: false});
     </script>
 </body>
 </html>
